Skip to content
GitLab
  • Menu
Projects Groups Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • mesa mesa
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 2,780
    • Issues 2,780
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 948
    • Merge requests 948
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • Mesa
  • mesamesa
  • Issues
  • #2917
Closed
Open
Created May 07, 2020 by John Zupin@johnz-lunarg

i965: Rendering problems replaying a trace of "Refunct" after mesa-20.1.0-rc1 release [bisected]

System information

  • OS: Ubuntu 16.04
  • GPU: Intel Broadwell, Intel Skylake, Intel Kabylake
  • Kernel version: 4.10.0
  • Mesa version: mesa-20.1.0-rc1 and mesa-20.1.0-rc2

Describe the issue

A trace of the game "Refunct" no longer replays correctly after mesa-20.1.0-rc1 release.

Regression

This used to work for mesa-20.0.6

It has been bisected to this commit:

b684030c3a656ffdbc93581856034e0982db46fd is the first bad commit
commit b684030c3a656ffdbc93581856034e0982db46fd
Author: Mathias Fröhlich <mathias.froehlich@web.de>
Date:   Sat Apr 20 07:57:15 2019 +0200

    i965: Use the VAOs binding information in array setup.
    
    The change basically reimplements array setup by walking
    the gl_contex::Array._DrawVAO on a per binding sequence.
    In this way we can make direct use of the application
    provided minimum set of buffer objects and emit fewer relocs.
    
    v2: Rebase onto:
        compiler: Move double_inputs to gl_program::DualSlotInputs
    v3: Rebase onto introduction of gl_vertex_format
    v4: Reorder and extend patch series.
    v5: Split out two hunks into seperate patches.
    v6: Avoid using GL* types.
    
    Reviewed-by: Matt Turner <mattst88@gmail.com>
    Signed-off-by: Mathias Fröhlich <Mathias.Froehlich@web.de>
    Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/308>

:040000 040000 ce354c383971b679527c71ac96e51f26d3bb44be c962591d53019bb6941de6f9f589413948e945ad M	src

Screenshots/video files

Here are some screenshots of frames before and after:

  • https://share.lunarg.com/opengl/report/4774#images/two-up/1120204
  • https://share.lunarg.com/opengl/report/4774#images/two-up/1120159
  • https://share.lunarg.com/opengl/report/4774#images/two-up/1120184
  • https://share.lunarg.com/opengl/report/4774#images/two-up/1120199

Any extra information would be greatly appreciated

  • Trace can be provided upon request
Edited May 07, 2020 by John Zupin
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking